qt6/gen_qgraphicsscene.nim

proc fcQGraphicsScene_items23(self: pointer, rect: pointer, mode: cint): struct_miqt_array {.importc: "QGraphicsScene_items23".}
proc fcQGraphicsScene_items32(self: pointer, rect: pointer, mode: cint, order: cint): struct_miqt_array {.importc: "QGraphicsScene_items32".}
proc fcQGraphicsScene_items42(self: pointer, rect: pointer, mode: cint, order: cint, deviceTransform: pointer): struct_miqt_array {.importc: "QGraphicsScene_items42".}
proc fcQGraphicsScene_items25(self: pointer, path: pointer, mode: cint): struct_miqt_array {.importc: "QGraphicsScene_items25".}
proc fcQGraphicsScene_items34(self: pointer, path: pointer, mode: cint, order: cint): struct_miqt_array {.importc: "QGraphicsScene_items34".}
proc fcQGraphicsScene_items44(self: pointer, path: pointer, mode: cint, order: cint, deviceTransform: pointer): struct_miqt_array {.importc: "QGraphicsScene_items44".}
proc fcQGraphicsScene_items7(self: pointer, x: float64, y: float64, w: float64, h: float64, mode: cint, order: cint, deviceTransform: pointer): struct_miqt_array {.importc: "QGraphicsScene_items7".}
proc fcQGraphicsScene_collidingItems2(self: pointer, item: pointer, mode: cint): struct_miqt_array {.importc: "QGraphicsScene_collidingItems2".}
proc fcQGraphicsScene_setSelectionArea2(self: pointer, path: pointer, selectionOperation: cint): void {.importc: "QGraphicsScene_setSelectionArea2".}
proc fcQGraphicsScene_setSelectionArea3(self: pointer, path: pointer, selectionOperation: cint, mode: cint): void {.importc: "QGraphicsScene_setSelectionArea3".}
proc fcQGraphicsScene_setSelectionArea4(self: pointer, path: pointer, selectionOperation: cint, mode: cint, deviceTransform: pointer): void {.importc: "QGraphicsScene_setSelectionArea4".}
proc fcQGraphicsScene_addEllipse22(self: pointer, rect: pointer, pen: pointer): pointer {.importc: "QGraphicsScene_addEllipse22".}
proc fcQGraphicsScene_addEllipse3(self: pointer, rect: pointer, pen: pointer, brush: pointer): pointer {.importc: "QGraphicsScene_addEllipse3".}
proc fcQGraphicsScene_addLine22(self: pointer, line: pointer, pen: pointer): pointer {.importc: "QGraphicsScene_addLine22".}
proc fcQGraphicsScene_addPath2(self: pointer, path: pointer, pen: pointer): pointer {.importc: "QGraphicsScene_addPath2".}
proc fcQGraphicsScene_addPath3(self: pointer, path: pointer, pen: pointer, brush: pointer): pointer {.importc: "QGraphicsScene_addPath3".}
proc fcQGraphicsScene_addRect22(self: pointer, rect: pointer, pen: pointer): pointer {.importc: "QGraphicsScene_addRect22".}
proc fcQGraphicsScene_addRect3(self: pointer, rect: pointer, pen: pointer, brush: pointer): pointer {.importc: "QGraphicsScene_addRect3".}
proc fcQGraphicsScene_addText2(self: pointer, text: struct_miqt_string, font: pointer): pointer {.importc: "QGraphicsScene_addText2".}
proc fcQGraphicsScene_addSimpleText2(self: pointer, text: struct_miqt_string, font: pointer): pointer {.importc: "QGraphicsScene_addSimpleText2".}
proc fcQGraphicsScene_addWidget2(self: pointer, widget: pointer, wFlags: cint): pointer {.importc: "QGraphicsScene_addWidget2".}
proc fcQGraphicsScene_addEllipse5(self: pointer, x: float64, y: float64, w: float64, h: float64, pen: pointer): pointer {.importc: "QGraphicsScene_addEllipse5".}
proc fcQGraphicsScene_addEllipse6(self: pointer, x: float64, y: float64, w: float64, h: float64, pen: pointer, brush: pointer): pointer {.importc: "QGraphicsScene_addEllipse6".}
proc fcQGraphicsScene_addLine5(self: pointer, x1: float64, y1: float64, x2: float64, y2: float64, pen: pointer): pointer {.importc: "QGraphicsScene_addLine5".}
proc fcQGraphicsScene_addRect5(self: pointer, x: float64, y: float64, w: float64, h: float64, pen: pointer): pointer {.importc: "QGraphicsScene_addRect5".}
proc fcQGraphicsScene_addRect6(self: pointer, x: float64, y: float64, w: float64, h: float64, pen: pointer, brush: pointer): pointer {.importc: "QGraphicsScene_addRect6".}
proc fcQGraphicsScene_setFocusItem2(self: pointer, item: pointer, focusReason: cint): void {.importc: "QGraphicsScene_setFocusItem2".}
proc fcQGraphicsScene_setFocus1(self: pointer, focusReason: cint): void {.importc: "QGraphicsScene_setFocus1".}
proc fcQGraphicsScene_invalidate5(self: pointer, x: float64, y: float64, w: float64, h: float64, layers: cint): void {.importc: "QGraphicsScene_invalidate5".}
proc fcQGraphicsScene_update1(self: pointer, rect: pointer): void {.importc: "QGraphicsScene_update1".}
proc fcQGraphicsScene_invalidate1(self: pointer, rect: pointer): void {.importc: "QGraphicsScene_invalidate1".}
proc fcQGraphicsScene_invalidate22(self: pointer, rect: pointer, layers: cint): void {.importc: "QGraphicsScene_invalidate22".}
proc fQGraphicsScene_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGraphicsScene_virtualbase_metacall".}
proc fcQGraphicsScene_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_metacall".}
proc fQGraphicsScene_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QGraphicsScene_virtualbase_inputMethodQuery".}
proc fcQGraphicsScene_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_inputMethodQuery".}
proc fQGraphicsScene_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGraphicsScene_virtualbase_event".}
proc fcQGraphicsScene_override_virtual_event(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_event".}
proc fQGraphicsScene_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGraphicsScene_virtualbase_eventFilter".}
proc fcQGraphicsScene_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_eventFilter".}
proc fQGraphicsScene_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_contextMenuEvent".}
proc fcQGraphicsScene_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_contextMenuEvent".}
proc fQGraphicsScene_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_dragEnterEvent".}
proc fcQGraphicsScene_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_dragEnterEvent".}
proc fQGraphicsScene_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_dragMoveEvent".}
proc fcQGraphicsScene_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_dragMoveEvent".}
proc fQGraphicsScene_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_dragLeaveEvent".}
proc fcQGraphicsScene_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_dragLeaveEvent".}
proc fQGraphicsScene_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_dropEvent".}
proc fcQGraphicsScene_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_dropEvent".}
proc fQGraphicsScene_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_focusInEvent".}
proc fcQGraphicsScene_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_focusInEvent".}
proc fQGraphicsScene_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_focusOutEvent".}
proc fcQGraphicsScene_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_focusOutEvent".}
proc fQGraphicsScene_virtualbase_helpEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_helpEvent".}
proc fcQGraphicsScene_override_virtual_helpEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_helpEvent".}
proc fQGraphicsScene_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_keyPressEvent".}
proc fcQGraphicsScene_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_keyPressEvent".}
proc fQGraphicsScene_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_keyReleaseEvent".}
proc fcQGraphicsScene_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_keyReleaseEvent".}
proc fQGraphicsScene_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_mousePressEvent".}
proc fcQGraphicsScene_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_mousePressEvent".}
proc fQGraphicsScene_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_mouseMoveEvent".}
proc fcQGraphicsScene_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_mouseMoveEvent".}
proc fQGraphicsScene_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_mouseReleaseEvent".}
proc fcQGraphicsScene_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_mouseReleaseEvent".}
proc fQGraphicsScene_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_mouseDoubleClickEvent".}
proc fcQGraphicsScene_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_mouseDoubleClickEvent".}
proc fQGraphicsScene_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_wheelEvent".}
proc fcQGraphicsScene_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_wheelEvent".}
proc fQGraphicsScene_virtualbase_inputMethodEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_inputMethodEvent".}
proc fcQGraphicsScene_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_inputMethodEvent".}
proc fQGraphicsScene_virtualbase_drawBackground(self: pointer, painter: pointer, rect: pointer): void{.importc: "QGraphicsScene_virtualbase_drawBackground".}
proc fcQGraphicsScene_override_virtual_drawBackground(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_drawBackground".}
proc fQGraphicsScene_virtualbase_drawForeground(self: pointer, painter: pointer, rect: pointer): void{.importc: "QGraphicsScene_virtualbase_drawForeground".}
proc fcQGraphicsScene_override_virtual_drawForeground(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_drawForeground".}
proc fQGraphicsScene_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QGraphicsScene_virtualbase_focusNextPrevChild".}
proc fcQGraphicsScene_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_focusNextPrevChild".}
proc fQGraphicsScene_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_timerEvent".}
proc fcQGraphicsScene_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_timerEvent".}
proc fQGraphicsScene_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_childEvent".}
proc fcQGraphicsScene_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_childEvent".}
proc fQGraphicsScene_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGraphicsScene_virtualbase_customEvent".}
proc fcQGraphicsScene_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_customEvent".}
